--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <h1>   </h1>
   <img src="images/Cat_clicker.png" width="500" height="300" style="border:3px solid white">
   <lable style="font-size:400%;">Cat Clicker By Albert</lable>
-  <a href="https://scratch.mit.edu/projects/915126759/">
+  <a href=gifer.com/">
     <button style="background-color:black; color:white; border:3px solid white; font-size: 400%">Play Here</button>
   </a>
   <h1>   </h1>
